--- a/task_02.html
+++ b/task_02.html
@@ -32,15 +32,18 @@
 			var filterArray = aqiData.filter(function(item){
 				return 	item[1] > 60;
 			});
-			//将空气质量指数大于60的城市进行降序排列
-			var sortCount = filterArray.sort(function(a,b){
-				return b[1] - a[1];
-			});
+			/*
+			将空气质量指数大于60的城市进行降序排列.对于数值类型，可以使用一个更简单的比较函数
+			function compare(value1,value2) {return value2 - value1},用第二个值减去第一个值(降序)
+			*/
+			function compare(value1,value2) {
+				return value2[1] - value1[1];
+			}
+			var sortCount = filterArray.sort(compare);
 			//添加到ul列表中
 			var aqiList = document.getElementById("aqi-list");
 			var chineseNums = ["一","二","三","四","五","六","七"];
-			for(var i = 0; i < sortCount.length; i++){
-					//aqiList.innerHTML += "<li>第" + (i + 1) + "名:" + sortCount[i][0] + "," + sortCount[i][1] + "</li>";
+			for (var i = 0; i < sortCount.length; i++){
 					aqiList.innerHTML += "<li>第" + chineseNums[i] + "名：" + sortCount[i][0] + "," + sortCount[i][1] + "</li>";
 			}
 		})();
